--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,2 +1,5 @@
 <%= @user.name %>
 <%= @user.email %>
+<% if current_user == @user %>
+  <%= link_to "Edit Info", edit_user_path(@user) %>
+<% end %>
