--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,5 +1,8 @@
-<%= simple_form_for current_user, :url => account_path do |f| %>
-  <%= f.input :email, :input_html => { :class => "span4" } %>
-  <%= f.input :password, :input_html => { :class => "span4" } %>
-  <%= f.submit :class => 'btn btn-primary' %>
+<div class="page_header">
+  <h2><span>Edit Your Account</span></h2>
+</div>
+<%= simple_form_for @user do |f| %>
+  <%= f.input :email %>
+  <%= f.input :password %>
+  <%= f.submit "Edit", :class => "btn btn-primary" %>
 <% end %>
