--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,12 +4,12 @@
   <%= link_to "Edit Info", edit_user_path(@user) %>
 <% end %>
 <p>
-  <h2>Best Times</h2>
+  <h2>Best Times by Trail</h2>
     <% @user.best_times.each do |t| %>
       <%= t.trail.name %>:
       <%= Time.at(t.min.to_i).utc.strftime("%H:%M:%S") %>
       <% if t.min.to_i == t.trail.best_timing.seconds %>
-        <h4>Best Overall!</h4>
+        <span style="color:red">Best Overall!</span>
       <% end %>
       <br />
     <% end %>
