--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,29 +7,30 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-<div class="navbar navbar-fixed-top">
-  <div class="navbar-inner">
-    <div class="container">
-      <a class="brand" href="/">Uwharrie Offroad</a>
-        <div class="utilities pull-right">
-          <% if logged_in? %>
-            <%= "Welcome, " %><%= link_to current_user.name, current_user %> |
-            <%= link_to "Logout", logout_path %>
-          <% else %>
-            <%= link_to "Sign Up", signup_path %> |
-            <%= link_to "Login", login_path %>
-          <% end %>
-        </div>
-		</div>
-  </div>
-</div>
+  <header class="navbar navbar-fixed-top">
+    <nav class="navbar-inner">
+      <div class="container">
+        <%= render "layouts/navigation" %>
+      </div>
+    </nav>
+  </header>
 
-<% flash.each do |key, value| %>
-	<div class="alert alert-heading" <%= key %>>
-		<%= value %>
-	</div>
-        <% end %>
-<%= yield %>
+  <div id="main" role="main">
+    <div class="container">
+      <div class="content">
+         <div class="row">
+          <div class="span12">
+            <%= render 'layouts/messages' %>
+            <%= yield %>
+          </div>
+        </div>
+        <div class="footer">
+        This is <strong>Not</strong> an official site of the US Government, USDA, or National Forests. It is an open-source project, the code is
+        <%= link_to "here", "https://github.com/SSundseth/uwharrie-offroad" %>, please feel free to contribute.
+        </div>
+      </div>
+    </div>
+  </div>
 
 </body>
 </html>
