--- a/app/views/trails/index.html.erb
+++ b/app/views/trails/index.html.erb
@@ -8,3 +8,5 @@
     </li>
   <% end %>
 </ul>
+
+<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=35.410669,-80.05909&amp;sll=35.383592,-79.988794&amp;sspn=0.058011,0.111322&amp;t=p&amp;ie=UTF8&amp;ll=35.410669,-80.05909&amp;spn=0.028995,0.055661&amp;z=14&amp;output=embed"></iframe><br /><small><a href="https://www.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=35.410669,-80.05909&amp;sll=35.383592,-79.988794&amp;sspn=0.058011,0.111322&amp;t=p&amp;ie=UTF8&amp;ll=35.410669,-80.05909&amp;spn=0.028995,0.055661&amp;z=14" style="color:#0000FF;text-align:left">View Larger Map</a></small>
