--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,3 +6,6 @@
   <%= f.input :password %>
   <%= f.submit "Edit", :class => "btn btn-primary" %>
 <% end %>
+
+<h2><span>Click Here to Delete Your Account</span></h2>
+  <%= link_to "Delete Account", user_path(@user), :method => :delete, :confirm => "Are you sure you want to delete your account?" %>
