--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,11 @@
-<%= @user.name %>
-<%= @user.email %>
-<% if current_user == @user %>
-  <%= link_to "Edit Info", edit_user_path(@user) %>
-  <%= link_to "Delete Account", user_path(@user), :method => :delete, :confirm => "Are you sure you want to delete your account?" %>
-<% end %>
+<div class="page_header">
+  <h2><span><%= @user.name %></h2></span>
+</div>
+<div class="info">
+  email: <%= @user.email %>
+</div>
 <p>
-  <h2>Best Times by Trail</h2>
+  <h4>Best Times by Trail</h4>
     <% @user.best_times.each do |t| %>
       <%= t.trail.name %>:
       <%= Time.at(t.min.to_i).utc.strftime("%H:%M:%S") %>
