--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,10 @@
 <h1>About</h1>
 
-<div class="span8 offset2 about-text">
+<div class="span8 offset1 about-text">
   UwharrieOffroad is a site for keeping track of your times on the trails of Uwharrie National Forest.
   Not much here yet but more features are coming soon!
+<p>
+  This is <strong>Not</strong> an official site of the US Government, USDA, or National Forests. It is an open-source project, the code is
+  <%= link_to "here", "https://github.com/SSundseth/uwharrie-offroad" %>, please feel free to contribute.
+</p>
 </div>
