--- a/app/views/trails/index.html.erb
+++ b/app/views/trails/index.html.erb
@@ -1,12 +1,11 @@
-<ul class="nav nav-list">
-  <li class="nav-header">
-    Click on a trail to see more info
-  </li>
-  <% @trails.each do |t| %>
-    <li>
-      <%= link_to t.name, t %>
-    </li>
-  <% end %>
-</ul>
-
-<iframe width="425" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://www.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=35.410669,-80.05909&amp;sll=35.383592,-79.988794&amp;sspn=0.058011,0.111322&amp;t=p&amp;ie=UTF8&amp;ll=35.410669,-80.05909&amp;spn=0.028995,0.055661&amp;z=14&amp;output=embed"></iframe><br /><small><a href="https://www.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=35.410669,-80.05909&amp;sll=35.383592,-79.988794&amp;sspn=0.058011,0.111322&amp;t=p&amp;ie=UTF8&amp;ll=35.410669,-80.05909&amp;spn=0.028995,0.055661&amp;z=14" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+<h1>Click on a Trail to see more info</h1>
+<div class="row">
+  <div class="span12">
+    <ul id="topo-map">
+      <% @trails.each do |t| %>
+        <li id=<%= "#{t.name}".downcase.gsub(/\s|\./, '_') %>><%= link_to t.name, t %></li>
+      <% end %>
+    </ul>
+      Image copyrighted by Southeast Overland LLC. All rights reserved.
+  </div>
+</div>
