--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,11 +1,15 @@
-<div class="page_header">
-  <h2><span>Edit Your Account</span></h2>
-</div>
-<%= simple_form_for @user do |f| %>
-  <%= f.input :email %>
-  <%= f.input :password %>
-  <%= f.submit "Edit", :class => "btn btn-primary" %>
-<% end %>
+<% if @user == current_user %>
+  <div class="page_header">
+    <h2><span>Edit Your Account</span></h2>
+  </div>
+  <%= simple_form_for @user do |f| %>
+    <%= f.input :email %>
+    <%= f.input :password %>
+    <%= f.submit "Edit", :class => "btn btn-primary" %>
+  <% end %>
 
-<h2><span>Click Here to Delete Your Account</span></h2>
-  <%= link_to "Delete Account", user_path(@user), :method => :delete, :confirm => "Are you sure you want to delete your account?" %>
+  <h2><span>Click Here to Delete Your Account</span></h2>
+  <%= link_to "Delete Account", user_path(@user), :method => :delete, :data => { :confirm => "Are you sure you want to delete your account?" } %>
+<% else %>
+  You can't edit someone else's account lol!
+<% end %>
