created timing controller

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -13,6 +13,9 @@
     <%= link_to('Edit account', edit_user_path(current_user)) %>
     </li>
     <li>
+    <%= link_to('Add Time', new_timing_path) %>
+    </li>
+    <li>
     <%= link_to('Logout', logout_path) %>
     </li>
   <% else %>
