--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
 <p>
   <h4>Best Times by Trail</h4>
     <% @user.best_times.each do |t| %>
-      <%= t.trail.name %>:
+      <%= link_to t.trail.name, t.trail %>:
       <%= Time.at(t.min.to_i).utc.strftime("%H:%M:%S") %>
       <% if t.min.to_i == t.trail.best_timing.seconds %>
         <span style="color:red">Best Overall!</span>
