--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -2,6 +2,7 @@
 <ul class="nav pull-left">
   <li>
   <%= link_to "About", "/about" %>
+  <%= link_to "Location", "/location" %>
   </li>
 </ul>
 <ul class="nav pull-right">
