--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,6 +5,60 @@
   <%= stylesheet_link_tag    "application", :media => "all" %>
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
+  <meta name = "viewport" content = "width = device-width; initial-scale=1.0; maximum-scale=1.0; user-scalable=no;">
+<script src="http://code.google.com/apis/gears/gears_init.js" type="text/javascript" charset="utf-8"></script>
+<script src="js/geo.js" type="text/javascript" charset="utf-8"></script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+
+<script>
+function initialize_map()
+{
+    var myOptions = {
+	      zoom: 4,
+	      mapTypeControl: true,
+	      mapTypeControlOptions: {style: google.maps.MapTypeControlStyle.DROPDOWN_MENU},
+	      navigationControl: true,
+	      navigationControlOptions: {style: google.maps.NavigationControlStyle.SMALL},
+	      mapTypeId: google.maps.MapTypeId.ROADMAP
+	    }
+	map = new google.maps.Map(document.getElementById("map_canvas"), myOptions);
+}
+function initialize()
+{
+	if(geo_position_js.init())
+	{
+		document.getElementById('current').innerHTML="Receiving...";
+		geo_position_js.getCurrentPosition(show_position,function(){document.getElementById('current').innerHTML="Couldn't get location"},{enableHighAccuracy:true});
+	}
+	else
+	{
+		document.getElementById('current').innerHTML="Functionality not available";
+	}
+}
+
+function show_position(p)
+{
+	document.getElementById('current').innerHTML="latitude="+p.coords.latitude.toFixed(2)+" longitude="+p.coords.longitude.toFixed(2);
+	var pos=new google.maps.LatLng(p.coords.latitude,p.coords.longitude);
+	map.setCenter(pos);
+	map.setZoom(14);
+
+	var infowindow = new google.maps.InfoWindow({
+	    content: "<strong>yes</strong>"
+	});
+
+	var marker = new google.maps.Marker({
+	    position: pos,
+	    map: map,
+	    title:"You are here"
+	});
+
+	google.maps.event.addListener(marker, 'click', function() {
+	  infowindow.open(map,marker);
+	});
+
+}
+</script>
 </head>
 <body>
   <header class="navbar navbar-fixed-top">
