added info field for trails

--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,6 +1,6 @@
 <h1>About</h1>
 
-<div class="span8 offset1 about-text">
+<div class="span6 about-text">
   UwharrieOffroad is a site for keeping track of your times on the trails of Uwharrie National Forest.
   Not much here yet but more features are coming soon!
 <p>
