--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -1,7 +1,7 @@
 <div class="page_header">
   <h2><%= @trail.name %></h2>
 </div>
-<div class="info">
+<div class="stats">
   length: <%= @trail.length %><br />
   difficulty: <%= @trail.difficulty %>
 </div>
@@ -11,3 +11,5 @@
   <%= Time.at(@trail.best_timing.seconds).utc.strftime("%H:%M:%S") %>
   </p>
 <% end %>
+
+<%= @trail.info %>
