--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -12,4 +12,23 @@
   </p>
 <% end %>
 
-<%= @trail.info %>
+
+<p>
+  <%= @trail.info %>
+</p>
+
+
+<% if logged_in? %>
+  <h3>Add a Comment</h3>
+  <%= render "comments/form" %>
+<% else %>
+  <h3>You must <%= link_to "login", login_path %> to comment</h3>
+<% end %>
+
+
+<h3>Comments</h3>
+<% if @comments.any? %>
+  <%= render "comments/comment", :object => @comments.newest_first %>
+<% else %>
+  <span style="color:grey">No Comments Yet!</span>
+<% end %>
