--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,11 +1,11 @@
 <% for comment in object %>
   <div class="row">
     <div class="span10">
-      <%= render "comments/info", :object => [comment] %>
+      <span style="color:grey"><%= render "comments/info", :object => [comment] %></span>
       <% if comment.deleted %>
         <p><span style="color:grey">Comment has been deleted by user</span></p>
       <% else %>
-        <p><%= comment.body %></p>
+        <p><%= simple_format h(comment.body) %></p>
       <% end %>
       <div class="offset1">
         <%= render "comments/comment", :object => comment.comments.newest_first %>
