location page tells you if you are Viget

--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -1,83 +1,66 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <style>
-      #tripmeter {
-        border: 3px double black;
-        padding: 10px;
-        margin: 10px 0;
-      }
+<script type="text/javascript">
+  window.onload = function() {
+    var startPos;
+    var homeLat = 35.974551;
+    var homeLon = -78.99481;
+    var vigLat  = 35.997105;
+    var vigLon  = -78.899893;
 
-      p {
-        color: #222;
-        font: 14px Arial;
-      }
+    function showStartPos(position) {
+      startPos = position;
+      document.getElementById("startLat").innerHTML = startPos.coords.latitude;
+      document.getElementById("startLon").innerHTML = startPos.coords.longitude;
+    }
 
-      span {
-        color: #00C;
-      }
-    </style>
-  </head>
-  <body>
-    <div id="tripmeter">
-      <p>
-        Starting Location (lat, lon):<br/>
-        <span id="startLat">???</span>&deg;, <span id="startLon">???</span>&deg;
-      </p>
-      <p>
-        Current Location (lat, lon):<br/>
-        <span id="currentLat">???</span>&deg;, <span id="currentLon">???</span>&deg;
-      </p>
-      <p>
-        Distance from starting location:<br/>
-        <span id="distance">0</span> km
-      </p>
-    </div>
-    <script>
-      window.onload = function() {
-        var startPos;
+    function showError(error) {
+      alert("Error occurred. Error code: " + error.code);
+      // error.code can be:
+      //   0: unknown error
+      //   1: permission denied
+      //   2: position unavailable (error response from locaton provider)
+      //   3: timed out
+    }
 
-        if (navigator.geolocation) {
-          navigator.geolocation.getCurrentPosition(function(position) {
-            startPos = position;
-            document.getElementById("startLat").innerHTML = startPos.coords.latitude;
-            document.getElementById("startLon").innerHTML = startPos.coords.longitude;
-          }, function(error) {
-            alert("Error occurred. Error code: " + error.code);
-            // error.code can be:
-            //   0: unknown error
-            //   1: permission denied
-            //   2: position unavailable (error response from locaton provider)
-            //   3: timed out
-          });
+    function isInArea(position, cenLat, cenLon) {
+      var posLat = position.coords.latitude;
+      var posLon = position.coords.longitude;
 
-          navigator.geolocation.watchPosition(function(position) {
-            document.getElementById("currentLat").innerHTML = position.coords.latitude;
-            document.getElementById("currentLon").innerHTML = position.coords.longitude;
-            document.getElementById("distance").innerHTML =
-              calculateDistance(startPos.coords.latitude, startPos.coords.longitude,
-                                position.coords.latitude, position.coords.longitude);
-          });
-        }
-      };
+      var squareDist = Math.pow(cenLat - posLat, 2) + Math.pow(cenLon - posLon, 2);
+      return squareDist <= Math.pow(0.0005, 2);
+    }
 
-      // Reused code - copyright Moveable Type Scripts - retrieved May 4, 2010.
-      // http://www.movable-type.co.uk/scripts/latlong.html
-      // Under Creative Commons License http://creativecommons.org/licenses/by/3.0/
-      function calculateDistance(lat1, lon1, lat2, lon2) {
-        var R = 6371; // km
-        var dLat = (lat2-lat1).toRad();
-        var dLon = (lon2-lon1).toRad();
-        var a = Math.sin(dLat/2) * Math.sin(dLat/2) +
-                Math.cos(lat1.toRad()) * Math.cos(lat2.toRad()) *
-                Math.sin(dLon/2) * Math.sin(dLon/2);
-        var c = 2 * Math.atan2(Math.sqrt(a), Math.sqrt(1-a));
-        var d = R * c;
-        return d;
+    function showCurrentPos(position) {
+      var lat = position.coords.latitude;
+      var lon = position.coords.longitude;
+
+      document.getElementById("currentLat").innerHTML = lat;
+      document.getElementById("currentLon").innerHTML = lon;
+      if (isInArea(position, vigLat, vigLon)) {
+        document.getElementById("atHome").innerHTML = "YES!";
       }
-      Number.prototype.toRad = function() {
-        return this * Math.PI / 180;
+      else {
+        document.getElementById("atHome").innerHTML = "NO!";
       }
-    </script>
-  </body>
-</html>​
+    }
+
+    if (navigator.geolocation) {
+        navigator.geolocation.getCurrentPosition(showStartPos, showError);
+
+        navigator.geolocation.watchPosition(showCurrentPos);
+    }
+  }
+</script>
+<div id="tripmeter">
+  <p>
+    Starting Location (lat, lon):<br/>
+    <span id="startLat">???</span>&deg;, <span id="startLon">???</span>&deg;
+  </p>
+  <p>
+    Current Location (lat, lon):<br/>
+    <span id="currentLat">???</span>&deg;, <span id="currentLon">???</span>&deg;
+    </p>
+  <p>
+    Are you at Viget South?<br/>
+    <span id="atHome">???</span>
+  </p>
+</div>
