--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -1,4 +1,12 @@
 <script type="text/javascript">
+  var count = 0;
+  var int = self.setInterval("clock()",1000);
+
+  function clock() {
+    count++;
+    document.getElementById("intTime").innerHTML=count;
+  }
+
   window.onload = function() {
     var startPos;
     var homeLat = 35.974551;
@@ -35,8 +43,16 @@
 
       document.getElementById("currentLat").innerHTML = lat;
       document.getElementById("currentLon").innerHTML = lon;
+
       if (isInArea(position, vigLat, vigLon)) {
+        document.getElementById("atViget").innerHTML = "YES!";
+      }
+      else {
+        document.getElementById("atViget").innerHTML = "NO!";
+      }
+      if (isInArea(position, homeLat, homeLon)) {
         document.getElementById("atHome").innerHTML = "YES!";
+        window.clearInterval(int);
       }
       else {
         document.getElementById("atHome").innerHTML = "NO!";
@@ -45,8 +61,7 @@
 
     if (navigator.geolocation) {
         navigator.geolocation.getCurrentPosition(showStartPos, showError);
-
-        navigator.geolocation.watchPosition(showCurrentPos);
+        navigator.geolocation.watchPosition(showCurrentPos, showError, {maximumAge:0});
     }
   }
 </script>
@@ -58,9 +73,16 @@
   <p>
     Current Location (lat, lon):<br/>
     <span id="currentLat">???</span>&deg;, <span id="currentLon">???</span>&deg;
-    </p>
+  </p>
   <p>
     Are you at Viget South?<br/>
+    <span id="atViget">???</span>
+  </p>
+  <p>
+    Are you at Stef's House?<br />
     <span id="atHome">???</span>
+  </p>
+  <p>
+    Time: <span id="intTime">???</span>
   </p>
 </div>
