trails have locations

--- a/app/views/comments/edit.html.erb
+++ b/app/views/comments/edit.html.erb
@@ -4,3 +4,4 @@
   <%= button_tag "Edit", :class => 'btn btn-primary' %>
   </p>
 <% end %>
+<%= button_to "Cancel", @comment.get_trail, :method => :get, :class => 'btn btn-danger' %>
