--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -2,6 +2,11 @@ div {
   word-break: break-all;
   word-wrap: break-word;
 }
+
+.children {
+  padding-left:30px;
+}
+
 ul#topo-map {
   list-style: none;
   background: url(/assets/uwharrie-topo-highlights.png) no-repeat 0 0;
