--- a/app/views/pages/location.html.erb
+++ b/app/views/pages/location.html.erb
@@ -1,86 +1,9 @@
-<script type="text/javascript">
-  var elapsed = '0';
-  var homeLat = 35.974551;
-  var homeLon = -78.99481;
-  var vigLat  = 35.997105;
-  var vigLon  = -78.899893;
+<%= content_tag "div", id: "ajax_test", data: {
+  trail_id: 90,
+  user_id: 30,
+  seconds: 9000
+} do %>
 
-  function clock() {
-    var time = new Date().getTime() - start;
-    elapsed = Math.floor(time / 1000);
-    document.getElementById("intTime").innerHTML = elapsed
-  }
+Ajax Test
 
-  function isInArea(position, cenLat, cenLon) {
-    var posLat = position.coords.latitude;
-    var posLon = position.coords.longitude;
-
-    var squareDist = Math.pow(cenLat - posLat, 2) + Math.pow(cenLon - posLon, 2);
-    return squareDist <= Math.pow(0.0005, 2);
-  }
-
-  function showError(error) {
-    alert("Error occurred. Error code: " + error.code);
-    // error.code can be:
-    //   0: unknown error
-    //   1: permission denied
-    //   2: position unavailable (error response from locaton provider)
-    //   3: timed out
-  }
-
-  function showCurrentPos(position) {
-    var lat = position.coords.latitude;
-    var lon = position.coords.longitude;
-
-    document.getElementById("currentLat").innerHTML = lat;
-    document.getElementById("currentLon").innerHTML = lon;
-
-    if (isInArea(position, vigLat, vigLon)) {
-      document.getElementById("atViget").innerHTML = "YES!";
-      document.getElementById("startBut").onclick = function() { start = new Date().getTime(); window.timer = setInterval('clock()', 100); };
-      document.getElementById("startBut").innerHTML = "Begin timing";
-    }
-    else {
-      document.getElementById("atViget").innerHTML = "NO!";
-    }
-
-    if (isInArea(position, homeLat, homeLon)) {
-      document.getElementById("atHome").innerHTML = "YES!";
-      clearInterval(window.timer);
-    }
-    else {
-      document.getElementById("atHome").innerHTML = "NO!";
-    }
-  }
-
-  window.onload = function() {
-
-    if (navigator.geolocation) {
-      navigator.geolocation.watchPosition(showCurrentPos, showError, {enableHighAccuracy:true});
-    }
-    else { document.write("Your device cannot be located") }
-  }
-</script>
-
-<div id="tripmeter">
-  <p>
-    Current Location (lat, lon):<br/>
-    <span id="currentLat">???</span>&deg;, <span id="currentLon">???</span>&deg;
-  </p>
-  <p>
-    Are you at Viget South?<br/>
-    <span id="atViget">???</span>
-  </p>
-  <p>
-    Are you at Stef's House?<br />
-    <span id="atHome">???</span>
-  </p>
-  <p>
-    <button id="startBut"></button>
-    <button id="resetBut" onclick="start = new Date().getTime()">Reset</button>
-    <button id="stopBut" onclick="clearInterval(window.timer);
-                         document.getElementById('startBut').disabled = false">Stop</button><br />
-
-    Time: <span id="intTime">???</span>
-  </p>
-</div>
+<% end %>
