--- a/app/views/trails/show.html.erb
+++ b/app/views/trails/show.html.erb
@@ -27,8 +27,10 @@
 
 
 <h3>Comments</h3>
+<div id="comments">
 <% if @comments.any? %>
   <%= render "comments/comment", :object => @comments.newest_first %>
 <% else %>
   <span style="color:grey">No Comments Yet!</span>
 <% end %>
+</div>
