--- a/app/views/comments/_comment.html.erb
+++ b/app/views/comments/_comment.html.erb
@@ -1,13 +1,15 @@
 <% for comment in object %>
   <div class="row">
     <div class="span10">
-      <span style="color:grey"><%= render "comments/info", :object => [comment] %></span>
-      <% if comment.deleted %>
-        <p><span style="color:grey">Comment has been deleted by user</span></p>
-      <% else %>
-        <p><%= simple_format h(comment.body) %></p>
-      <% end %>
-      <div class="offset1">
+      <div id="comment">
+        <span style="color:grey"><%= render "comments/info", :object => [comment] %></span>
+        <% if comment.deleted %>
+          <p><span style="color:grey">Comment has been deleted by user</span></p>
+        <% else %>
+          <%= simple_format h(comment.body) %>
+        <% end %>
+      </div>
+      <div class="children">
         <%= render "comments/comment", :object => comment.comments.newest_first %>
       </div>
     </div>
