--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -3,9 +3,6 @@
   <li>
   <%= link_to "About", "/about" %>
   </li>
-  <li>
-  <%= link_to "Location", "/location" %>
-  </li>
 </ul>
 <ul class="nav pull-right">
   <% if logged_in? %>
@@ -13,20 +10,20 @@
     <%= link_to current_user.name, current_user %>
     </li>
     <li>
-    <%= link_to('Edit account', edit_user_path(current_user)) %>
+    <%= link_to 'Edit account', edit_user_path(current_user)  %>
     </li>
     <li>
-    <%= link_to('Add Time', new_timing_path) %>
+    <%= link_to 'Add Time', new_timing_path  %>
     </li>
     <li>
-    <%= link_to('Logout', logout_path) %>
+    <%= link_to 'Logout', logout_path  %>
     </li>
   <% else %>
     <li>
-    <%= link_to('Login', login_path)  %>
+    <%= link_to 'Login', login_path  %>
     </li>
     <li>
-    <%= link_to('Sign up', signup_path)  %>
+    <%= link_to 'Sign up', signup_path  %>
     </li>
   <% end %>
 </ul>
