--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
     <div class="container">
       <div class="content">
          <div class="row">
-          <div class="span12">
+          <div class="span10 offset1">
             <%= render 'layouts/messages' %>
             <%= yield %>
           </div>
