--- a/app/views/comments/show.html.erb
+++ b/app/views/comments/show.html.erb
@@ -1,5 +1,5 @@
 <div class="showcomment">
-  <%= render "comments/info", :object => [@comment] %>
+  <span style="color:grey"><%= render "comments/info", :object => [@comment] %></span>
   <%= @comment.body %>
 </div>
 <%= render "comments/form" %>
