--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,4 +1,6 @@
-<h1>About</h1>
+<div class="page_header">
+  <h1>About</h1>
+</div>
 UwharrieOffroad is a site for keeping track of your times on the trails of Uwharrie National Forest.
 Not much here yet but more features are coming soon!
 <p>
