--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,11 +1,11 @@
-<div class="form-page span4 offset4">
-	<h1 class="form-title">Reset Password</h1>
-
-	<%= form_tag password_resets_path, :class => "well span3" do %>
-		<div class="field">
-			<%= label_tag :email %><br />
-			<%= text_field_tag :email %>
-		</div>
-		<%= submit_tag 'Reset', :class => "btn btn-primary" %>
-	<% end %>
+<div class="page_header">
+  <h1>Reset Password</h1>
 </div>
+
+<%= form_tag password_resets_path do %>
+  <div class="field">
+    <%= label_tag :email %>
+    <%= text_field_tag :email %>
+  </div>
+  <%= submit_tag 'Reset', :class => "btn btn-primary" %>
+<% end %>
