--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,10 +1,10 @@
 <div class="page_header">
-  <h2><span>New User</span></h2>
+  <h1>New User</h1>
 </div>
 
 <%= simple_form_for @user do |f| %>
-  <%= f.input :name %>
-  <%= f.input :email %>
+  <%= f.input :name, :label => "Username" %>
+  <%= f.input :email, :label => "Email (optional)" %>
   <%= f.input :password %>
   <%= f.submit "Sign Up", :class => "btn btn-primary" %>
 <% end %>
