--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,12 @@
 <div class="page_header">
-  <h2><span><%= @user.name %></h2></span>
+  <h1><%= @user.name %></h1>
 </div>
 <div class="info">
   email: <%= @user.email %>
 </div>
-<p>
-  <h4>Best Times by Trail</h4>
+<div class="row">
+  <div class="span4">
+    <h4>Best Times by Trail</h4>
     <% @user.best_times.each do |t| %>
       <%= link_to t.trail.name, t.trail %>:
       <%= Time.at(t.min.to_i).utc.strftime("%H:%M:%S") %>
@@ -14,4 +15,12 @@
       <% end %>
       <br />
     <% end %>
-</p>
+  </div>
+  <div class="span4 offset1">
+    <h4>Recent Times</h4>
+    <% @user.recent_times.each do |t| %>
+      <%= link_to t.trail.name, t.trail %>:
+      <%= Time.at(t.seconds).utc.strftime("%H:%M:%S") %>
+      <br />
+    <% end %>
+</div>
