--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,7 +1,7 @@
 <div class="page_header">
   <h1><%= @user.name %></h1>
 </div>
-<div class="info">
+<div class="stats">
   email: <%= @user.email %>
 </div>
 <div class="row">
