--- a/app/views/comments/_info.html.erb
+++ b/app/views/comments/_info.html.erb
@@ -1,7 +1,7 @@
 <% for comment in object %>
   <div class="info">
     <% if comment.user %>
-      <%= comment.user.name %>
+      <%= link_to comment.user.name, "/user/#{comment.user.name}" %>
     <% else %>
       <span style="color:red">**account deleted</span>
     <% end %>
