--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -34,7 +34,7 @@ ul#topo-map li#dickey_bell a:hover {
   background-position: -267px -685px;
 }
 
-ul#topo-map li#rocky_mnt__loop a:hover {
+ul#topo-map li#rocky_mountain_loop a:hover {
   background-position: -648px -820px;
 }
 
