--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -72,7 +72,7 @@ ul#topo-map li#saw_mill a:hover {
   left: 342px;
 }
 
-#rocky_mnt__loop {
+#rocky_mountain_loop {
   width: 181px;
   height: 126px;
   top: 144px;
