--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -42,7 +42,7 @@ ul#topo-map li#dickey_bell a:hover {
   background-position: -267px -685px;
 }
 
-ul#topo-map li#rocky_mnt__loop a:hover {
+ul#topo-map li#rocky_mountain_loop a:hover {
   background-position: -648px -820px;
 }
 
@@ -80,7 +80,7 @@ ul#topo-map li#saw_mill a:hover {
   left: 342px;
 }
 
-#rocky_mnt__loop {
+#rocky_mountain_loop {
   width: 181px;
   height: 126px;
   top: 144px;
