--- a/app/assets/stylesheets/comments.css.scss
+++ b/app/assets/stylesheets/comments.css.scss
@@ -1,3 +1,16 @@
 // Place all the styles related to the Comments controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.comment {
+  font-size: 10pt;
+  line-height: 5px;
+}
+
+.comment a:link {
+  color:grey;
+}
+
+
+.children {
+  padding-left:30px;
+}
