--- a/app/views/timings/new.html.erb
+++ b/app/views/timings/new.html.erb
@@ -10,7 +10,7 @@
       user: current_user
     } do %>
       <p>
-      <button id="locationBegin">Click here when GPS is active</button>
+      <button id="locationBegin" class="btn btn-primary">Click here when GPS is active</button>
       <p>
         Current Location (lat, lon):<br/>
         <span id="currentLat">???</span>&deg;, <span id="currentLon">???</span>&deg;
@@ -18,11 +18,11 @@
       <p>
         Trail Name: <span id="trailName">Waiting for GPS...</span>
       </p>
-      <button id="startButton">Waiting...</button>
+      <button id="startButton" class="btn btn-primary">Waiting...</button>
       <p>
         Time: <span id="timer">???</span>
       </p>
-      <button id="submitButton" style="display: none"></button>
+      <button id="submitButton" class="btn-large btn-success" style="display: none"></button>
     <% end %>
   </div>
   <div class="span4 offset1">
