--- a/app/views/trails/index.html.erb
+++ b/app/views/trails/index.html.erb
@@ -1,7 +1,9 @@
 <h1>Click on a Trail to see more info</h1>
+<div class="trail-map">
   <ul id="topo-map">
     <% @trails.each do |t| %>
       <li id=<%= "#{t.name}".downcase.gsub(/\s|\./, '_') %>><%= link_to t.name, t %></li>
     <% end %>
   </ul>
-    Image copyrighted by Southeast Overland LLC. All rights reserved.
+  Image copyrighted by Southeast Overland LLC. All rights reserved.
+</div>
