style and 100% spec coverage

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -1,5 +1,6 @@
 div {
   word-wrap: break-word;
+  line-height: 30px;
 }
 
 ul#topo-map {
@@ -44,72 +45,11 @@ ul#topo-map li#falls_dam a:hover {
 
 ul#topo-map li#slab_pile a:hover {
   background-position: -695px -961px;
+
+#main {
+  font-size: 14pt;
 }
 
-ul#topo-map li#wolfden a:hover {
-  background-position: -545px -820px;
-}
-
-ul#topo-map li#dutch_john a:hover {
-  background-position: -43px -689px;
-}
-
-ul#topo-map li#saw_mill a:hover {
-  background-position: -542px -953px;
-}
-
-#daniel {
-  width: 312px;
-  height: 128px;
-  top: 193px;
-  left: 471px;
-}
-
-#dickey_bell {
-  width: 243px;
-  height: 298px;
-  top: 273px;
-  left: 342px;
-}
-
-#rocky_mountain_loop {
-  width: 181px;
-  height: 126px;
-  top: 144px;
-  left: 298px;
-}
-
-#falls_dam {
-  width: 187px;
-  height: 205px;
-  top: 361px;
-  left: 86px;
-}
-
-#slab_pile {
-  width: 125px;
-  height: 68px;
-  top: 215px;
-  left: 168px;
-}
-
-#wolfden {
-  width: 64px;
-  height: 127px;
-  top: 226px;
-  left: 116px;
-}
-
-#dutch_john {
-  width: 214px;
-  height: 140px;
-  top: 285px;
-  left: 121px;
-}
-
-#saw_mill {
-  width: 105px;
-  height: 99px;
-  top: 108px;
-  left: 227px;
+.page_header, .stats {
+  padding-bottom:10px;
 }
