using jpg instead of png for trail map

--- a/app/assets/stylesheets/trails.css.scss
+++ b/app/assets/stylesheets/trails.css.scss
@@ -7,7 +7,7 @@
 
 ul#topo-map {
   list-style: none;
-  background: url(/assets/uwharrie-topo-highlights.png) no-repeat 0 0;
+  background: url(/assets/uwharrie-topo-highlights.jpg) no-repeat 0 0;
   position: relative;
   width: 100%;
   height: 680px;
@@ -26,7 +26,7 @@ ul#topo-map li a{
 }
 
 ul#topo-map li a:hover {
-  background: url(/assets/uwharrie-topo-highlights.png) no-repeat 0 0;
+  background: url(/assets/uwharrie-topo-highlights.jpg) no-repeat 0 0;
 }
 
 ul#topo-map li#daniel a:hover {
