--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -1,5 +1,5 @@
 @import "twitter/bootstrap/bootstrap";
-body { 
+body {
 	padding-top: 60px;
 }
 
@@ -10,7 +10,7 @@ body {
 @iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
 
 // Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
-// Note: If you use asset_path() here, your compiled boostrap_and_overrides.css will not 
+// Note: If you use asset_path() here, your compiled boostrap_and_overrides.css will not
 //       have the proper paths. So for now we use the absolute path.
 @fontAwesomeEotPath: '/assets/fontawesome-webfont.eot';
 @fontAwesomeWoffPath: '/assets/fontawesome-webfont.woff';
@@ -30,3 +30,103 @@ body {
 //
 // Example:
 // @linkColor: #ff0000;
+
+@media (max-width: 480px) {
+  body {
+  }
+
+  input {
+    width: 100%;
+  }
+
+  ul {
+    background: none;
+  }
+
+  ul li a:hover {
+    background: none;
+  }
+
+  .simple_form .btn {
+    width: 100%;
+  }
+
+  .button_to .btn {
+    width: 100%;
+  }
+
+  .sign-in .btn {
+    width: 100%;
+  }
+
+  a .btn {
+    width: auto;
+  }
+
+  .trail-map {
+    display: none;
+  }
+
+  ul#trail-list {
+    display: block;
+  }
+
+  div#tripmeter .btn {
+    width: 100%;
+  }
+}
+.navbar .brand {
+	color: #f6c600;
+	font-family: 'Alfa Slab One', cursive;
+	font-size: 25px;
+	letter-spacing: 1px;
+  padding: 8px 10px 0px 10px;
+  text-shadow: 2px 2px 0 #aa3e0d, -2px -2px 0 #aa3e0d, 2px -2px 0 #aa3e0d, -2px 2px 0 #aa3e0d;
+	text-transform: uppercase;
+}
+.brand em {
+	font-style: normal;
+}
+
+.navbar-inner {
+  background: #053;
+  filter: none;
+}
+
+.navbar-inner .btn {
+  width: auto;
+	background: transparent;
+	border: 0;
+  color: #732d06;
+	font-size: 12px;
+	font-weight: bold;
+  margin: 0;
+	-moz-box-shadow: inset 0 5px 10px -1px rgba(80,0,0,0.1);
+	-webkit-box-shadow: inset 0 5px 10px -1px rgba(80,0,0,0.1);
+	box-shadow: inset 0 5px 10px -5px rgba(80,0,0,0.1);
+	text-shadow: 0 2px 1px rgba(255,180,70,0.4);
+}
+.navbar-inner .btn-navbar {
+	-moz-box-shadow: none;
+	-webkit-box-shadow: none;
+	box-shadow: none;
+}
+.navbar-inner .btn-back {
+  margin-top: 2px;
+}
+.navbar-inner .btn-navbar[data-toggle] {
+  text-align: right;
+  background: rgba(0,0,0,.1);
+  .box-shadow(inset 1px 1px 0 rgba(0,0,0,.3);
+  margin-top: 4px;
+  &:hover {
+    background: rgba(0,0,0,.2);
+  }
+}
+.navbar .nav > li > a {
+	color: #fff;
+}
+.navbar .nav > li > a:active,
+.navbar .nav > li > a:hover {
+	background-color: rgba(0,0,0,.1);
+}
