--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,7 +7,7 @@
     <% @user.best_times.each do |t| %>
       <%= link_to t.trail.name, t.trail %>:
       <%= Time.at(t.min.to_i).utc.strftime("%H:%M:%S") %>
-      <% if t.min.to_i == t.trail.best_timing.seconds %>
+      <% if t.min.to_i == t.trail.leaderboard.first.seconds %>
         <span style="color:red">Best Overall!</span>
       <% end %>
       <br />
