--- a/app/views/timings/new.html.erb
+++ b/app/views/timings/new.html.erb
@@ -1,3 +1,9 @@
+<% content_for :new_timing do %>
+  <script type="text/javascript" language="javascript">
+    $(function() { window.exports(); });
+  </script>
+<% end %>
+
 <div class="page_header">
   <h1><span>Time Yourself</span></h1>
 </div>
