--- a/app/assets/stylesheets/bootstrap_and_overrides.css.less
+++ b/app/assets/stylesheets/bootstrap_and_overrides.css.less
@@ -2,16 +2,12 @@
 body {
 	padding-top: 60px;
 }
-
 @import "twitter/bootstrap/responsive";
 
 // Set the correct sprite paths
 @iconSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings.png');
 @iconWhiteSpritePath: asset-path('twitter/bootstrap/glyphicons-halflings-white.png');
 
-// Set the Font Awesome (Font Awesome is default. You can disable by commenting below lines)
-// Note: If you use asset_path() here, your compiled boostrap_and_overrides.css will not
-//       have the proper paths. So for now we use the absolute path.
 @fontAwesomeEotPath: '/assets/fontawesome-webfont.eot';
 @fontAwesomeWoffPath: '/assets/fontawesome-webfont.woff';
 @fontAwesomeTtfPath: '/assets/fontawesome-webfont.ttf';
@@ -20,61 +16,6 @@ body {
 // Font Awesome
 @import "fontawesome";
 
-// Your custom LESS stylesheets goes here
-//
-// Since bootstrap was imported above you have access to its mixins which
-// you may use and inherit here
-//
-// If you'd like to override bootstrap's own variables, you can do so here as well
-// See http://twitter.github.com/bootstrap/less.html for their names and documentation
-//
-// Example:
-// @linkColor: #ff0000;
-
-@media (max-width: 480px) {
-  body {
-  }
-
-  input {
-    width: 100%;
-  }
-
-  ul {
-    background: none;
-  }
-
-  ul li a:hover {
-    background: none;
-  }
-
-  .simple_form .btn {
-    width: 100%;
-  }
-
-  .button_to .btn {
-    width: 100%;
-  }
-
-  .sign-in .btn {
-    width: 100%;
-  }
-
-  a .btn {
-    width: auto;
-  }
-
-  .trail-map {
-    display: none;
-  }
-
-  ul#trail-list {
-    display: block;
-  }
-
-  div#tripmeter .btn {
-    width: 100%;
-  }
-}
 .navbar .brand {
 	color: #f6c600;
 	font-family: 'Alfa Slab One', cursive;
@@ -129,4 +70,74 @@ body {
 .navbar .nav > li > a:active,
 .navbar .nav > li > a:hover {
 	background-color: rgba(0,0,0,.1);
+}
+
+
+@media (max-width: 480px) {
+  body {
+  }
+
+  input {
+    width: 100%;
+  }
+
+  ul {
+    background: none;
+  }
+
+  ul li a:hover {
+    background: none;
+  }
+
+  .simple_form .btn {
+    width: 100%;
+  }
+
+  .button_to .btn {
+    width: 100%;
+  }
+
+  .sign-in .btn {
+    width: 100%;
+  }
+
+  a .btn {
+    width: auto;
+  }
+
+  div#tripmeter .btn {
+    width: 100%;
+  }
+
+  input[type="submit"].btn {
+    width: 100%;
+  }
+
+  input, textarea {
+    width: 100%;
+  }
+
+  .children {
+    padding-left: 10px !important;
+  }
+}
+
+@media (max-width: 979px) {
+  .trail-map {
+    display: none;
+  }
+
+  ul#trail-list {
+    display: block;
+  }
+}
+
+@media (max-width: 1200px) {
+  .span10 {
+    width: 100%;
+  }
+  .offset1 {
+    margin-left: auto;
+    margin-right: auto;
+  }
 }
