timer looks better

--- a/app/views/timings/new.html.erb
+++ b/app/views/timings/new.html.erb
@@ -22,7 +22,7 @@
   </p>
   <button id="startButton" class="btn btn-primary">Begin Timing</button>
   <p>
-    Time: <span id="timer">???</span>
+  Time: <span id="hours">00</span>:<span id="minutes">00</span>:<span id="seconds">00</span>
   </p>
   <button id="submitButton" class="btn-large btn-success" style="display: none"></button>
 <% end %>
