--- a/app/assets/stylesheets/trails.css.scss
+++ b/app/assets/stylesheets/trails.css.scss
@@ -137,3 +137,71 @@ ul#topo-map li#saw_mill a:hover {
   top: 108px;
   left: 227px;
 }
+
+//Digg-style pagination
+.paginated {
+  background: white;
+  cursor: default;
+}
+
+.paginated a, .paginated span, .paginated em {
+  padding: 0.2em 0.5em;
+  display: block;
+  float: left;
+  margin-right: 1px;
+}
+
+.paginated .disabled {
+  color: #999999;
+  border: 1px solid #dddddd;
+}
+
+.paginated .current {
+  font-style: normal;
+  font-weight: bold;
+  background: #2e6ab1;
+  color: white;
+  border: 1px solid #2e6ab1;
+}
+
+.paginated a {
+  text-decoration: none;
+  color: #105cb6;
+  border: 1px solid #9aafe5;
+}
+
+.paginated a:hover, .paginated a:focus {
+  color: #000033;
+  border-color: #000033;
+}
+
+.paginated .page_info {
+  background: #2e6ab1;
+  color: white;
+  padding: 0.4em 0.6em;
+  width: 22em;
+  margin-bottom: 0.3em;
+  text-align: center;
+}
+
+.paginated .page_info b {
+  color: #000033;
+  background: #6aa6ed;
+  padding: 0.1em 0.25em;
+}
+
+.paginated:after {
+  content: ".";
+  display: block;
+  height: 0;
+  clear: both;
+  visibility: hidden;
+}
+
+* html .paginated {
+  height: 1%;
+}
+
+*:first-child + html .paginated {
+  overflow: hidden;
+}
